# Journal-backend

./: .env  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
src/: app.module.ts  app.service.ts  main.py
src/api/v1/: router.py
src/api/v1/endpoints/: journals.py
src/common/dto/: response.dto.ts
src/core/: cleanup.py  config.py  firebase.py  logger.py  prompt_templates.py
src/journal/: journal.controller.ts  journal.module.ts  journal.service.ts
src/journal/dto/: journal.dto.ts
src/models/: journal.py  response.py
src/qdrant/: qdrant.controller.ts  qdrant.module.ts  qdrant.service.ts
src/services/: gemini_service.py  qdrant_service.py
src/utils/: journal_extractor.py  journal_validator.py
tests/: conftest.py
tests/api/v1/: test_chat_with_journals.py  test_create_journal.py  test_get_summary.py
tests/unit/: test_journals.py  test_validator.py
