[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "journal-backend-fastapi"
version = "0.1.0"
authors = [
  { name="Bahadur", email="bahadur@gaya.app" },
]
description = "Journal Backend FastAPI"
readme = "README.md"
requires-python = ">=3.8"

[tool.pytest.ini_options]
pythonpath = [
  "."
]